@@ -1,12 +1,10 @@
 plugins {
-    id("application")
+    id("java")
     id("org.openjfx.javafxplugin") version "0.1.0"
 }
 
 dependencies {
     implementation(project(":application"))
-
-    runtimeOnly("ch.qos.logback:logback-classic:1.5.32")
 
     // Icon library – Ikonli with Feather pack
     implementation("org.kordamp.ikonli:ikonli-javafx:12.4.0")
@@ -18,13 +16,6 @@ dependencies {
     // Lombok
     compileOnly("org.projectlombok:lombok:1.18.42")
     annotationProcessor("org.projectlombok:lombok:1.18.42")
-}
-
-application {
-    mainClass.set("com.triplify.ui.MainApp")
-    applicationDefaultJvmArgs = listOf(
-        "--enable-native-access=javafx.graphics"
-    )
 }
 
 javafx {
